Try to fix font issue on mobile (5th attempt)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,9 +14,7 @@
   html {
     @apply bg-black text-xl lg:text-2xl;
     font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: subpixel-antialiased;
-    /* -webkit-text-stroke: 1px transparent; */
+    -webkit-text-stroke: 1px transparent;
   }
 }
 
